--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PageObjectModelSeleniumWebDriver</name>
+	<name>Assignment POM Selenium WebDriver 3</name>
 	<comment></comment>
 	<projects>
 	</projects>
